syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option go_package = "github.com/drankou/deep-odd/pkg/api/types";

service DeepOdds {
    rpc GetInPlayFootballMatches (InPlayFootballMatchesRequest) returns (FootballMatchesResponse) {
    }

    rpc GetFootballMatchPrediction (FootballMatchPredictionRequest) returns (FootballMatchPredictionResponse) {
    }
}

message InPlayFootballMatchesRequest {
    //league id
    string league_id = 2; //optional
}

message FootballMatchesResponse {
    repeated FootballMatch matches = 1;
}

message FootballMatchPredictionRequest {
    string event_id = 1;
}

message FootballMatchPredictionResponse {
    Prediction prediction = 1;
}

message Prediction {
    double home_win = 1;
    double draw = 2;
    double away_win = 3;
}

message FootballMatch {
    string id = 1;
    string time_status = 2;
    string score = 3;
    string home_team = 4;
    string away_team = 5;
    string league_name = 6;
    Time time = 7;
}

message Time {
    int64 minutes = 1;
    int64 seconds = 2;
    int64 added_time = 3;
}
